2006-05-26  Yevgen Muntyan  <muntyan@math.tamu.edu>
    * === Released 0.6.99 ===

2006-05-22  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added Open With submenu in file selector popup menu.

2006-05-21  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Fixed bug with per-language settings lost on save.

2006-05-21  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added document list menu in editor windows.

2006-05-19  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Fixed crash on paste from another application.

2006-05-16  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Improved entry completion behaviour.

2006-05-13  Yevgen Muntyan  <muntyan@math.tamu.edu>
    pystuff.py: Escape filename using quotes, not apostrophe.

2006-05-13  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Updated printing code for changes in gtk api.

2006-05-12  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Fixed MooIconView background bug.

2006-05-12  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added pygtk warning pattern for python output pane.

2006-05-10  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added run-script command for MooApp: writing "s<script>\0" to input
    pipe executes <script>.

2006-05-10  Yevgen Muntyan  <muntyan@math.tamu.edu>
    There is a single win32 installer now, and medit picks up python if it's present
    on startup: medit is not linked to pythonxx.dll, python support has been moved
    into pymo2x plugins.

2006-05-09  Andreas Hanke  <a_ha@users.sourceforge.net>
    Removed CFLAGS from AM_CFLAGS; fixed ACLOCAL_FLAGS business.

2006-05-08  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Removed MooAction, using GtkAction now.

2006-05-08  Yevgen Muntyan  <muntyan@math.tamu.edu>

    * === Released 0.6.98 ===

    Added printing support for gtk-2.9.
        Printing support in gtk is not stable yet, and will likely change
        in future, therefore printing in medit must be explicitely enabled by
        --enable-printing argument to configure.